2005-12-10  Sushma Rai  <rsushma@novell.com>

	* gui/contact-editor/e-contact-editor.c (fill_in_address_textview):
	Not inserting new line at the end and also, placing the cursor at
	the beginning of the widget. Fixes #300300.

2005-12-06  Veerapuram Varadhan <vvaradhan@novell.com>
	
	* conduits/addressbook-conduit.c: (pre_sync):
	Authenticate by reading the store-password for calendars that has
	"auth" property set.
	* conduits/addressbook-conduit.c: (addressbook_authenticate):
	Implement authentication using e-passwords.
	
2005-11-26  Tor Lillqvist  <tml@novell.com>

	* gui/contact-editor/e-contact-editor.c
	* gui/contact-editor/e-contact-editor-address.c
	* gui/contact-editor/e-contact-editor-fullname.c
	* gui/contact-editor/e-contact-editor-im.c
	* gui/contact-list-editor/e-contact-list-editor.c
	* gui/merging/eab-contact-merging.c
	* gui/widgets/e-addressbook-view.c
	* printing/e-contact-print.c
	* printing/e-contact-print-style-editor.c: Include
	e-util-private.h to get redefinition of compile-time pathnames as
	calls to functions on Windows. Construct the pathnames of files
	and directories under the installation prefix at run-time to
	enable install-anywhere on Windows. No effect on functionality on
	Unix.

2005-11-25  Tor Lillqvist  <tml@novell.com>

	* gui/component/openldap-extract.h: New file. Contains various
	things lifted from OpenLDAP for use on Windows where we use
	Microsoft's LDAP implementation. The same file is also in
	e-d-s/backends/ldap.

	* gui/component/Makefile.am: Distribute openldap-extract.h.

	* gui/component/addressbook-config.c: Include openldap-extract.h on
	Windows. Include e-util-private.h to get redefinition of
	EVOLUTION_GLADEDIR (as a call to a function) on Windows.
	(query_for_supported_bases, eabc_general_name, eabc_general_host,
	eabc_general_auth, eabc_details_search, eabc_details_limit,
	addressbook_config_edit_source): Construct the path of the glade
	file at run-time to enable install-anywhere on Windows.
